--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,12 @@ edition = "2021"
 [dependencies]
 petgraph = { version = "0.6.4", features = ["serde"] }
 rand = { version = "0.8.5" }
+rayon = "1.8.0"
 itertools = "0.11.0"
 ordered-float = "3.9.1"
+cc = "1.0.83"
+cxx = "1.0"
+log = "0.4.20"
+
+[build-dependencies]
+cxx-build = "1.0"
