--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-name = "framework-rs"
+name = "para-graph"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Your Name <you@example.com>"]
+description = "A brief description of what your crate does."
+repository = "https://github.com/yourusername/para-graph"
+license = "MIT"  # Or your choice of license
 
 [[bench]]
 name = "floyd_warshall"
