--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,10 @@ harness = false
 name = "binary_search"
 harness = false
 
+[[bench]]
+name = "gaussian_elimination"
+harness = false
+
 [dependencies]
 petgraph = { version = "0.6.4", features = ["serde"] }
 rand = { version = "0.8.5" }
